fixed text overflow of indicator titles on dashboard

--- a/app/assets/stylesheets/dashboard.css.scss
+++ b/app/assets/stylesheets/dashboard.css.scss
@@ -28,7 +28,7 @@
         background-color: $light;
         color: $dark;
         white-space: nowrap;
-        width: 40%;
+        width: 60%;
         text-shadow: none;
       }
 
